--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "antd": "^4.10.0",
     "axios": "^0.21.1",
     "echarts": "^5.0.0",
+    "html2canvas": "^1.0.0-rc.7",
     "immutable": "^4.0.0-rc.12",
+    "jspdf": "^2.3.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
